- c: initial number of buckets in hash table increased to 500000 - c: new functions lnf_mem_read_raw, lnf_mem_write_raw added

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,7 +1,7 @@
 
 AM_CFLAGS = -I$(top_srcdir)/include 
 
-bin_PROGRAMS = lnf_ex01_writer lnf_ex02_reader lnf_ex03_aggreg 
+bin_PROGRAMS = lnf_ex01_writer lnf_ex02_reader lnf_ex03_aggreg lnf_ex05_aggreg
 
 lnf_ex01_writer_SOURCES = lnf_ex01_writer.c
 lnf_ex01_writer_LDADD = ../src/.libs/libnf.a
@@ -19,4 +19,7 @@ bin_PROGRAMS += lnf_ex04_threads
 lnf_ex04_threads_SOURCES = lnf_ex04_threads.c
 lnf_ex04_threads_LDADD = ../src/.libs/libnf.a -lpthread
 endif 
+
+lnf_ex05_aggreg_SOURCES = lnf_ex05_memtrans.c
+lnf_ex05_aggreg_LDADD = ../src/.libs/libnf.a
 
