build system update for the new filter code

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -10,7 +10,7 @@ LDADD = $(DEPS_LIBS)
 #Add extra debug info for gdb and nfdump includes
 AM_CFLAGS = -ggdb -I$(top_srcdir)/include -I$(top_srcdir)/nfdump/bin
 
-EXTRA_DIST = libnf_internal.h bit_array.h hash_table.h heap_sort.h xxhash.h fields.h scanner.c grammar.c 
+EXTRA_DIST = libnf_internal.h bit_array.h hash_table.h heap_sort.h xxhash.h fields.h 
 #util.h
 
 CLEANFILES = lex.yy.c 
@@ -19,14 +19,16 @@ CLEANFILES = lex.yy.c
 # Target for the libnfdump library
 lib_LTLIBRARIES = libnf.la
 libnf_la_SOURCES = libnf.c bit_array.c heap_sort.c hash_table.c xxhash.c memheap.c fields.c \
-	nffile.c nfx.c nftree.c minilzo.c nf_common.c ipconv.c 
+	nffile.c nfx.c minilzo.c nf_common.c ipconv.c 
 
 if LNF_EXPERIMENTAL
-BUILT_SOURCES = lnf_filter_gram.h
+BUILT_SOURCES = lnf_filter_gram.h 
+EXTRA_DIST += lnf_filter_gram.c lnf_filter_lex.c lnf_filter.h
 libnf_la_SOURCES += lnf_filter_gram.y lnf_filter_lex.l lnf_filter.c
 else
 BUILT_SOURCES = grammar.h
-libnf_la_SOURCES += grammar.y scanner.l 
+EXTRA_DIST += scanner.c grammar.c
+libnf_la_SOURCES += nftree.c grammar.y scanner.l 
 endif 
 
 # Simple info program 
