--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,7 +1,7 @@
 
 AM_CFLAGS = -I$(top_srcdir)/include 
 
-bin_PROGRAMS = lnf_ex01_writer lnf_ex02_reader lnf_ex03_aggreg lnf_ex05_aggreg lnf_ex06_readreset
+bin_PROGRAMS = lnf_ex01_writer lnf_ex02_reader lnf_ex03_aggreg lnf_ex05_aggreg lnf_ex06_readreset lnf_ex07_filter
 
 lnf_ex01_writer_SOURCES = lnf_ex01_writer.c
 lnf_ex01_writer_LDADD = ../src/.libs/libnf.a
@@ -26,3 +26,5 @@ lnf_ex05_aggreg_LDADD = ../src/.libs/libnf.a
 lnf_ex06_readreset_SOURCES = lnf_ex06_readreset.c
 lnf_ex06_readreset_LDADD = ../src/.libs/libnf.a
 
+lnf_ex07_filter_SOURCES = lnf_ex07_filter.c
+lnf_ex07_filter_LDADD = ../src/.libs/libnf.a
