Statistics support added

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,7 +1,8 @@
 
 AM_CFLAGS = -I$(top_srcdir)/include 
 
-bin_PROGRAMS = lnf_ex01_writer lnf_ex02_reader lnf_ex03_aggreg lnf_ex05_aggreg lnf_ex06_readreset lnf_ex07_filter
+bin_PROGRAMS = lnf_ex01_writer lnf_ex02_reader lnf_ex03_aggreg lnf_ex05_aggreg lnf_ex06_readreset \
+			lnf_ex07_filter lnf_ex08_statistics
 
 lnf_ex01_writer_SOURCES = lnf_ex01_writer.c
 lnf_ex01_writer_LDADD = ../src/.libs/libnf.a
@@ -28,3 +29,6 @@ lnf_ex06_readreset_LDADD = ../src/.libs/libnf.a
 
 lnf_ex07_filter_SOURCES = lnf_ex07_filter.c
 lnf_ex07_filter_LDADD = ../src/.libs/libnf.a
+
+lnf_ex08_statistics_SOURCES = lnf_ex08_statistics.c
+lnf_ex08_statistics_LDADD = ../src/.libs/libnf.a
