--- a/bin/Makefile.am
+++ b/bin/Makefile.am
@@ -1,6 +1,7 @@
 
 AM_CFLAGS = -I$(top_srcdir)/include 
 
+EXTRA_DIST = cpucores.h flist.h screen.h progress.h
 
 if LNF_THREADS
 bin_PROGRAMS = nfdumpp
