- examples testing added

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,7 +1,7 @@
 
 AM_CFLAGS = -I$(top_srcdir)/include 
 
-bin_PROGRAMS = lnf_ex01_writer lnf_ex02_reader lnf_ex03_aggreg lnf_ex05_aggreg lnf_ex06_readreset \
+bin_PROGRAMS = lnf_ex01_writer lnf_ex02_reader lnf_ex03_aggreg lnf_ex05_memtrans lnf_ex06_readreset \
 			lnf_ex07_filter lnf_ex08_statistics
 
 lnf_ex01_writer_SOURCES = lnf_ex01_writer.c
@@ -21,8 +21,8 @@ lnf_ex04_threads_SOURCES = lnf_ex04_threads.c
 lnf_ex04_threads_LDADD = ../src/.libs/libnf.a -lpthread
 endif 
 
-lnf_ex05_aggreg_SOURCES = lnf_ex05_memtrans.c
-lnf_ex05_aggreg_LDADD = ../src/.libs/libnf.a
+lnf_ex05_memtrans_SOURCES = lnf_ex05_memtrans.c
+lnf_ex05_memtrans_LDADD = ../src/.libs/libnf.a
 
 lnf_ex06_readreset_SOURCES = lnf_ex06_readreset.c
 lnf_ex06_readreset_LDADD = ../src/.libs/libnf.a
