ff_filteri_* -> ff_*

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -1,5 +1,5 @@
 
-EXTRA_DIST = libnf.h ff_filter.h
+EXTRA_DIST = libnf.h ffilter.h
 
-include_HEADERS = libnf.h ff_filter.h
+include_HEADERS = libnf.h ffilter.h
 
