RPM package can be built using `make rpm`
Added "rpm" target into Makefile.
Changed version in spec file to @VERSION@ that is replaced by configure.

--- a/Makefile.am
+++ b/Makefile.am
@@ -8,3 +8,13 @@ EXTRA_DIST = bootstrap nfdump
 SUBDIRS = src include bin examples 
 
 #main_SOURCES = nfdump
+
+.PHONY: rpm
+rpm:
+	make dist; \
+	rm -rf RPMBUILD; \
+	mkdir -p RPMBUILD/{SOURCES,SPECS,BUILD,BUILDROOT,RPMS,SRPMS}; \
+	cp libnf.spec RPMBUILD/SPECS; \
+	mv libnf-@VERSION@.tar.gz RPMBUILD/SOURCES; \
+	rpmbuild -ba RPMBUILD/SPECS/libnf.spec -D "_topdir `pwd`/RPMBUILD"
+
