scrren renamed to output

--- a/bin/Makefile.am
+++ b/bin/Makefile.am
@@ -6,7 +6,7 @@ EXTRA_DIST = cpucores.h flist.h screen.h progress.h
 if LNF_THREADS
 bin_PROGRAMS = nfdumpp
 
-nfdumpp_SOURCES = nfdumpp.c flist.c cpucores.c screen.c progress.c 
+nfdumpp_SOURCES = nfdumpp.c flist.c cpucores.c output.c progress.c 
 nfdumpp_LDADD = ../src/.libs/libnf.a -lpthread
 endif 
 
