possibility to build bzip2 code statically

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,7 +2,7 @@
 .NOTPARALLEL:
 
 #EXTRA_DIST = md5sum.sh nfdump-bugs.patch nfdump-thread.patch check_items_map.pl bootstrap prepare-nfdump.sh nfdump
-EXTRA_DIST = bootstrap nfdump
+EXTRA_DIST = bootstrap nfdump bzip2
 
 
 SUBDIRS = src include bin examples 
