fix of RPM build
add -fPIC to configure during the RPM build

--- a/libnf.spec.in
+++ b/libnf.spec.in
@@ -44,7 +44,7 @@ Nfdumpp is implementation of parallel nfdump based on libnf.net library.
 
 
 %build
-%configure
+%configure CFLAGS=-fPIC
 make %{?_smp_mflags}
 
 
