library version added

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -7,6 +7,9 @@ INCLUDES = $(DEPS_CFLAGS)
 LDADD = $(DEPS_LIBS)
 #AM_LDFLAGS=-pthread
 
+# https://www.gnu.org/software/libtool/manual/html_node/Updating-version-info.html#Updating-version-info
+libnf_la_LDFLAGS = -version-info 1:25:0
+
 #Add extra debug info for gdb and nfdump includes
 AM_CFLAGS = -ggdb -I$(top_srcdir)/include -I$(top_srcdir)/nfdump/bin -I$(top_srcdir)/src/ffilter
 
