--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -3,7 +3,7 @@ AM_CFLAGS = -I$(top_srcdir)/include
 
 bin_PROGRAMS = lnf_ex01_writer lnf_ex02_reader lnf_ex03_aggreg lnf_ex05_memtrans lnf_ex06_readreset \
 			lnf_ex07_filter lnf_ex08_statistics lnf_ex09_memlookup lnf_ex10_listmode lnf_ex11_memclean \
-			lnf_ex12_rec_raw
+			lnf_ex12_rec_raw lnf_ex13_ring_write lnf_ex14_ring_read 
 			
 
 lnf_ex01_writer_SOURCES = lnf_ex01_writer.c
@@ -46,4 +46,10 @@ lnf_ex11_memclean_LDADD = ../src/.libs/libnf.a
 
 lnf_ex12_rec_raw_SOURCES = lnf_ex12_rec_raw.c
 lnf_ex12_rec_raw_LDADD = ../src/.libs/libnf.a
+
+lnf_ex13_ring_write_SOURCES = lnf_ex13_ring_write.c
+lnf_ex13_ring_write_LDADD = ../src/.libs/libnf.a
+
+lnf_ex14_ring_read_SOURCES = lnf_ex14_ring_read.c
+lnf_ex14_ring_read_LDADD = ../src/.libs/libnf.a
 
