- should fix rpmbuild problem

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,7 +2,7 @@
 .NOTPARALLEL:
 
 #EXTRA_DIST = md5sum.sh nfdump-bugs.patch nfdump-thread.patch check_items_map.pl bootstrap prepare-nfdump.sh nfdump
-EXTRA_DIST = bootstrap nfdump bzip2
+EXTRA_DIST = bootstrap nfdump bzip2 libnf.spec libnf.doxygen
 
 
 SUBDIRS = src include bin examples 
@@ -17,6 +17,7 @@ dist-hook:
 
 .PHONY: rpm
 rpm:
+	make clean; \
 	make dist; \
 	rm -rf RPMBUILD; \
 	mkdir -p RPMBUILD/{SOURCES,SPECS,BUILD,BUILDROOT,RPMS,SRPMS}; \
