--- a/libnf.spec.in
+++ b/libnf.spec.in
@@ -11,7 +11,7 @@ Source0:	http://libnf.net/packages/%{name}-%{version}.tar.gz
 BuildRoot:	%(mktemp -ud %{_tmppath}/%{name}-%{version}-%{release}-XXXXXX)
 
 #BuildRequires:	
-#Requires:	
+Requires: bzip2-libs
 
 
 %description
@@ -44,7 +44,7 @@ Nfdumpp is implementation of parallel nfdump based on libnf.net library.
 
 
 %build
-%configure CFLAGS=-fPIC
+%configure --enable-bz2static=no CFLAGS=-fPIC
 make %{?_smp_mflags}
 
 
