--- a/bin/Makefile.am
+++ b/bin/Makefile.am
@@ -6,7 +6,7 @@ EXTRA_DIST = cpucores.h flist.h output.h progress.h output_line.h output_nfdump.
 if LNF_THREADS
 bin_PROGRAMS = nfdumpp
 
-nfdumpp_SOURCES = nfdumpp.c flist.c cpucores.c output.c output_line.c output_nfdump.c progress.c 
+nfdumpp_SOURCES = nfdumpp.c flist.c cpucores.c output.c output_line.c output_nfdump.c output_ringbuf.c progress.c 
 nfdumpp_LDADD = ../src/.libs/libnf.a -lpthread
 endif 
 
