upgraded to nfdump-1.6.20

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -20,7 +20,7 @@ endif
 #SUBDIRS = ffilter
 
 EXTRA_DIST = libnf_internal.h bit_array.h hash_table.h heap_sort.h list_sort.h xxhash.h fields.h \
-    lnf_filter.h literals.h
+    lnf_filter.h literals.h 
 
 
 CLEANFILES = lex.yy.c 
@@ -29,12 +29,12 @@ CLEANFILES = lex.yy.c
 # Target for the libnfdump library
 lib_LTLIBRARIES = libnf.la
 libnf_la_SOURCES = libnf.c bit_array.c heap_sort.c list_sort.c hash_table.c xxhash.c memheap.c fields.c \
-	nffile.c nfx.c minilzo.c nf_common.c ipconv.c lnf_filter.c literals.c lz4.c
+	nffile.c nfx.c minilzo.c ipconv.c lnf_filter.c literals.c lz4.c
 
 # Nfdump filter sources
-BUILT_SOURCES = grammar.h
+BUILT_SOURCES = grammar.h 
 EXTRA_DIST += scanner.c grammar.c
-libnf_la_SOURCES += nftree.c grammar.y scanner.l 
+libnf_la_SOURCES += nftree.c output_util.c grammar.y scanner.l 
 
 # Libnf flow filter sources 
 EXTRA_DIST += ffilter/ffilter_gram.c ffilter/ffilter_lex.c ffilter/ffilter_gram.h ffilter/ffilter_internal.h ffilter/ffilter.h ffilter/fcore.h
